A.F....... [ZBX-4311] fixed graph prototype name validation (pavels)
A.F....... [ZBXNEXT-906] redesign Configuration->Host groups (Eduard)
....I..... [ZBX-4024] new build process for database schema and data, also new location of database related files; db data file uses transactions now (Alexei)

Bug fixes:
..F....... [ZBX-4458] fixed js error in global macro form, changed layout to be consistant with other places (Vedmak)
..F....... [ZBX-4449] fixed IT services SLA graph permission checks (pavels)
A......... [ZBX-4448] fixed proxy interface validation (pavels)
..F....... [ZBX-4455] fixed the 'sortorder' field validation in the IT services form (pavels)
..F....... [ZBX-4427] fixed map element host group highlighting (pavels)
..F....... [ZBX-4446] fixed event duration calculation (pavels)
........S. [ZBX-2806] fixed possible double notification messages (dimir,Sasha)
A......... [ZBX-4425] fixed unsetting interface when performing Item::udpate requests (pavels)
..F....... [ZBX-4436] fixed wrong sql query in discovery popup (SlaVa)
....I..... [ZBX-4429] fixed problem with wrong mysql comment tag and warning in mysql function when  update to 1.9.8 (SlaVa)
........S. [ZBX-4418] fixed possible SQL errors while processing of time functions (Sasha)
..F....... [ZBX-4336] fixed problem with item status clearing when changing  to active in frontend (SlaVa)
A.F....... [ZBX-4260] replaced event sorting by 'clock' with 'eventid' (pavels)
..F....... [ZBX-4381] fixed permission check in SLA reports (pavels)
..F....... [ZBX-4411] remade the zbx_stripos() function whithout the use of mb_stripos() (pavels)
..F....... [ZBX-4015] fixed multiple XSS issues (pavels)
..F....... [ZBX-4334] changed disabled triggers and scenarios to be shown by default (sanja)
A......... [ZBX-4403] fixed low level discovery rule creation (pavels)
..F.I...S. [ZBX-3832] removed support of aggregated graph items (pavels, Sasha)